fragmentos y cards dinamicas

--- a/javascript/02 DOM/PJ DOM Tenda Basics/index.html
+++ b/javascript/02 DOM/PJ DOM Tenda Basics/index.html
@@ -29,6 +29,7 @@ https://templatemo.com/tm-559-zay-shop
 <body>
 
 
+
     <!-- Start Content -->
     <div class="container py-5">
         <div class="row">
@@ -259,6 +260,33 @@ https://templatemo.com/tm-559-zay-shop
                             </div>
                         </div>
                     </div>
+                    <!-- producto 9 -->
+                    <div class="col-md-3 cardProduct" id="card9" data-id="9">
+                        <div class="card mb-4 product-wap rounded-0">
+                            <div class="card rounded-0">
+                                <img class="card-img rounded-0 img-fluid" src="assets/img/shop_08.jpg">
+                                <div
+                                    class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
+                                    <ul class="list-unstyled">
+                                        <li>
+                                            <a class="btn btn-success text-white mt-2 cardAdd" data-id="8">
+                                                <i class="fas fa-cart-plus"></i>
+                                            </a>
+                                        </li>
+                                        <li><a class="btn btn-success text-white mt-2 cardRemove" data-id="8"><i
+                                                    class="fas fa-trash-alt"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <a href="shop-single.html" class="h3 text-decoration-none">Law</a>
+                                <p class="text-center mb-0">$19.99</p>
+                                <ul class="list-unstyled d-flex justify-content-center mb-1">
+                                    <li><i> - Clothes -</i></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
@@ -275,6 +303,9 @@ https://templatemo.com/tm-559-zay-shop
         <script src="js/data.js"></script>
         <!-- <script src="js/shop_01_items.js"></script> -->
           <script src="js/shop02_dinamicItems.js"></script>
+          <!-- <script src="js/card01dinamica.js"></script> -->
+          <!-- <script src="js/card02dinamica.js"></script> -->
+          <script src="js/card03dinamica.js"></script>
         <!-- End Script -->
 </body>
 
