--- a/vue/Computed/ex02_ExchangeCurrency/ex01_0ncurrencyExchangel.html
+++ b/vue/Computed/ex02_ExchangeCurrency/ex01_0ncurrencyExchangel.html
@@ -23,47 +23,115 @@
       <h1>Benvinguda:</h1>
       <h2>Currency Converter</h2>
       <span>Enter Amount:</span>
-      <input type="number" placeholder="Enter Amount" /><br /><br />
+      <input
+        type="number"
+        v-model="amount"
+        placeholder="Enter Amount"
+      /><br /><br />
       <span>Convert From:</span>
-      <select style="width: 300px; font-size: 25px">
-        <option v-for="(item, index) in currencyfrom" :value="item.name" v-model="convertFrom">
-             {{item.desc}}
+      <select v-model="convertFrom" style="width: 300px; font-size: 25px">
+        <option v-for="(item, index) in currencyfrom" :value="item.name">
+          {{item.desc}}
         </option>
       </select>
       <span>Convert To:</span>
-      <select style="width: 300px; font-size: 25px">
-         <option v-for="(item, index) in currencyfrom" :value="item.name" v-model="convertTo">
-            {{item.desc}}
-       </option></select
+      <select v-model="convertTo" style="width: 300px; font-size: 25px">
+        <option v-for="(item, index) in currencyfrom" :value="item.name">
+          {{item.desc}}
+        </option></select
       ><br /><br />
+      <span> {{amount}} {{convertFrom}} equivale a {{convertTo}} {{finalamount}} </span>
     </div>
 
     <script>
-      const app = new Vue({
-        el: "#databinding",
-        data: {
-          message: "Currency Exchange",
-          currencyfrom: [
-            { name: "USD", desc: "US Dollar" },
-            { name: "EUR", desc: "Euro" },
-            { name: "INR", desc: "Indian Rupee" },
-            { name: "BHD", desc: "Bahraini Dinar" },
-          ],
-          convertFrom: "",
-          convertTo: "",
-        },
+            const app = new Vue({
+              el: "#databinding",
+              data: {
+                message: "Currency Exchange",
+                currencyfrom: [
+                  { name: "USD", desc: "US Dollar" },
+                  { name: "EUR", desc: "Euro" },
+                  { name: "INR", desc: "Indian Rupee" },
+                  { name: "BHD", desc: "Bahraini Dinar" },
+                ],
+                convertFrom: "INR",
+                convertTo: "USD",
+                amount: 1000,
+              },
 
-        //propiedad computada
-         //  computed: {
-         //      ConvertFrom: function () {
-         //          if (this.item === "") {
-         //              return this.currencyfrom
-         //          } else {
-         //              return this.item.filter(element => element.toUpperCase().includes(this.currencyfrom.toUpperCase()))
-         //          }
-         //      }
-         //  },
-      });
+              //propiedad computada
+              computed: {
+                  finalamount: function () {
+                    var to = this.convertTo;
+                    var from = this.convertFrom;
+                    var final;
+
+                    switch (from) {
+                    case "INR":
+                      if (to == "USD") {
+                      final = this.amount * 0.016;
+                      }
+                     if (to == "EUR") {
+                      final = this.amount * 0.013;
+                      }
+                      if (to == "BHD") {
+                      final = this.amount * 0.0059;
+                      }
+                      if (to == "INR") {
+                      final = this.amount;
+                      }
+                   break;
+
+                    case "USD":
+                     if (to == "INR") {
+                    final = this.amount * 63.88;
+                    }
+                    if (to == "EUR") {
+                      final = this.amount * 0.84;
+                    }
+                    if (to == "BHD") {
+                      final = this.amount * 0.38;;
+                    }
+                    if (to == "USD") {
+                      final = this.amount;
+                    }
+                    break;
+
+                   case "EUR":
+                     if (to == "INR") {
+                    final = this.amount * 76.22;
+                    }
+                    if (to == "USD") {
+                      final = this.amount * 1.19;
+                    }
+                    if (to == "BHD") {
+                      final = this.amount *  0.45;;
+                    }
+                    if (to == "EUR") {
+                      final = this.amount;
+                    }
+                    break;
+
+                   case "BHD":
+                     if (to == "INR") {
+                    final = this.amount * 169.44;
+                    }
+                    if (to == "USD") {
+                      final = this.amount *  2.65;
+                    }
+                    if (to == "EUR") {
+                      final = this.amount *  2.22;
+                    }
+                    if (to == "BHD") {
+                      final = this.amount;
+                    }
+                    break;
+                    }
+                    return final
+                    
+                  }
+            }
+            })
     </script>
   </body>
 </html>
